Support `@HandleCustom` and `@HandleDocument`