@@ -15,6 +15,9 @@
 package io.fluxcapacitor.javaclient.persisting.search.client;
 
 import io.fluxcapacitor.common.Guarantee;
+import io.fluxcapacitor.common.Registration;
+import io.fluxcapacitor.common.api.Metadata;
+import io.fluxcapacitor.common.api.SerializedMessage;
 import io.fluxcapacitor.common.api.search.CreateAuditTrail;
 import io.fluxcapacitor.common.api.search.DocumentStats;
 import io.fluxcapacitor.common.api.search.DocumentUpdate;
@@ -28,6 +31,7 @@ import io.fluxcapacitor.common.api.search.SearchQuery;
 import io.fluxcapacitor.common.api.search.SerializedDocument;
 import io.fluxcapacitor.common.search.Document;
 import io.fluxcapacitor.javaclient.persisting.search.SearchHit;
+import io.fluxcapacitor.javaclient.tracking.IndexUtils;
 
 import java.time.Instant;
 import java.util.Collection;
@@ -40,42 +44,60 @@ import java.util.Optional;
 import java.util.TreeMap;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentSkipListMap;
+import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
+import static java.util.Collections.emptyList;
 import static java.util.function.Function.identity;
 import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.mapping;
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 
 public class InMemorySearchStore implements SearchClient {
-    protected static final Function<Document, String> identifier = d -> asIdentifier(d.getCollection(), d.getId());
+    protected static final Function<SerializedDocument, String> identifier = d -> asIdentifier(d.getCollection(), d.getId());
 
     protected static String asIdentifier(String collection, String documentId) {
         return collection + "/" + documentId;
     }
 
-    private final Map<String, Document> documents = new ConcurrentHashMap<>();
+    private final Map<String, SerializedDocument> documents = new ConcurrentHashMap<>();
+
+    private final AtomicLong nextIndex = new AtomicLong();
+    private final Map<String, ConcurrentSkipListMap<Long, SerializedMessage>> messageLogs = new ConcurrentHashMap<>();
+    private final Map<String, List<Consumer<List<SerializedMessage>>>> monitors = new ConcurrentHashMap<>();
 
     @Override
     public CompletableFuture<Void> index(List<SerializedDocument> documents, Guarantee guarantee, boolean ifNotExists) {
-        Map<String, Document> updates = documents.stream().map(SerializedDocument::deserializeDocument)
+        Map<String, SerializedDocument> updates = documents.stream()
                 .collect(toMap(identifier, identity(), (a, b) -> b, LinkedHashMap::new));
         if (ifNotExists) {
             updates.keySet().removeAll(this.documents.keySet());
-            this.documents.putAll(updates);
-        } else {
-            this.documents.putAll(updates);
         }
+        this.documents.putAll(updates);
+        storeMessages(updates);
         return CompletableFuture.completedFuture(null);
+    }
+
+    protected SerializedMessage asSerializedMessage(SerializedDocument document) {
+        long index = nextIndex.updateAndGet(IndexUtils::nextIndex);
+        var result = new SerializedMessage(document.getDocument(), Metadata.empty(), document.getId(),
+                                           IndexUtils.millisFromIndex(index));
+        result.setIndex(index);
+        return result;
     }
 
     @Override
     public Stream<SearchHit<SerializedDocument>> search(SearchDocuments searchDocuments, int fetchSize) {
         SearchQuery query = searchDocuments.getQuery();
-        Stream<Document> documentStream = documents.values().stream().filter(query::matches);
+        Stream<Document> documentStream = documents.values().stream().map(SerializedDocument::deserializeDocument)
+                .filter(query::matches);
         documentStream = documentStream.sorted(Document.createComparator(searchDocuments));
         if (!searchDocuments.getPathFilters().isEmpty()) {
             Predicate<Document.Path> pathFilter = searchDocuments.computePathFilter();
@@ -98,8 +120,7 @@ public class InMemorySearchStore implements SearchClient {
 
     @Override
     public Optional<SerializedDocument> fetch(GetDocument r) {
-        return Optional.ofNullable(documents.get(asIdentifier(r.getCollection(), r.getId())))
-                .map(SerializedDocument::new);
+        return Optional.ofNullable(documents.get(asIdentifier(r.getCollection(), r.getId())));
     }
 
     @Override
@@ -127,7 +148,8 @@ public class InMemorySearchStore implements SearchClient {
 
     @Override
     public List<DocumentStats> fetchStatistics(SearchQuery query, List<String> fields, List<String> groupBy) {
-        return DocumentStats.compute(documents.values().stream().filter(query::matches), fields, groupBy);
+        return DocumentStats.compute(documents.values().stream().map(SerializedDocument::deserializeDocument)
+                                             .filter(query::matches), fields, groupBy);
     }
 
     @Override
@@ -135,7 +157,7 @@ public class InMemorySearchStore implements SearchClient {
         SearchQuery query = request.getQuery();
         List<Long> results = IntStream.range(0, request.getResolution()).mapToLong(i -> 0L).boxed().collect(toList());
         if (query.getSince() == null) {
-            return new SearchHistogram(query.getSince(), query.getBefore(), results);
+            return new SearchHistogram(null, query.getBefore(), results);
         }
         if (query.getBefore() == null) {
             query = query.toBuilder().before(Instant.now()).build();
@@ -155,7 +177,7 @@ public class InMemorySearchStore implements SearchClient {
     public List<FacetStats> fetchFacetStats(SearchQuery query) {
         return documents.values().stream().filter(query::matches).flatMap(d -> d.getFacets().stream())
                 .collect(groupingBy(identity(), TreeMap::new, toList())).values().stream().map(group -> {
-                    FacetEntry first = group.get(0);
+                    FacetEntry first = group.getFirst();
                     return new FacetStats(first.getName(), first.getValue(), group.size());
                 }).sorted(Comparator.comparing(FacetStats::getCount).reversed()).toList();
     }
@@ -170,6 +192,40 @@ public class InMemorySearchStore implements SearchClient {
             }
         });
         return CompletableFuture.completedFuture(null);
+    }
+
+    public Stream<SerializedMessage> openStream(String collection, Long lastIndex, int maxSize) {
+        var map = messageLogs.get(collection);
+        if (map == null) {
+            return Stream.empty();
+        }
+        lastIndex = lastIndex == null ? -1L : lastIndex;
+        return map.tailMap(lastIndex, false).values().stream().limit(maxSize);
+    }
+
+    protected synchronized void storeMessages(Map<String, SerializedDocument> updates) {
+        Map<String, List<SerializedMessage>> byCollection
+                = updates.values().stream().collect(groupingBy(SerializedDocument::getCollection, mapping(
+                this::asSerializedMessage, toList())));
+        try {
+            byCollection.forEach((collection, messages) -> {
+                var log = messageLogs.computeIfAbsent(collection, c -> new ConcurrentSkipListMap<>());
+                messages.forEach(m -> log.put(m.getIndex(), m));
+            });
+        } finally {
+            byCollection.forEach(this::notifyMonitors);
+        }
+    }
+
+    protected void notifyMonitors(String collection, List<SerializedMessage> messages) {
+        this.notifyAll();
+        monitors.getOrDefault(collection, emptyList()).forEach(c -> c.accept(messages));
+    }
+
+    public synchronized Registration registerMonitor(String collection, Consumer<List<SerializedMessage>> monitor) {
+        var list = monitors.computeIfAbsent(collection, c -> new CopyOnWriteArrayList<>());
+        list.add(monitor);
+        return () -> list.remove(monitor);
     }
 
     @Override
